# dps-for-iot

./: .appveyor.yml  .gitignore  .travis.yml  LICENSE.md  README.md  SConscript  SConstruct  _examples_8dox.html  _message-_encryption_8md.html  _message-_protocol_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  asan.supp  building-and-running.html  classes.html  data-series.html  dbg_8h.html  dbg_8h.js  dbg_8h_source.html  dir_13c0c58698473ed8f9fbf60f7cb2fe0a.html  dir_143d9111106c2ba2452f83cceb80c482.html  dir_19a1ad10e03d3a0047dfb07071f3ce2d.html  dir_3021176de528f25fffb2fadc8fb87e26.html  dir_bfccd401955b95cf8c75461437045ac0.html  discovery_8h.html  discovery_8h.js  discovery_8h_source.html  dispatcher_8h.html  dispatcher_8h.js  dispatcher_8h_source.html  dps_8h.html  dps_8h.js  dps_8h_source.html  dps_ns3.pc.in  dps_shared.def  err_8h.html  err_8h.js  err_8h_source.html  event_8h.html  (+112 more)
.travis/: before_install-pyenv.sh  install-nodejs.sh  install-swig.sh  upstream-check.sh
application/: SConscript
doc/: Access-Control.md  Building-and-Running.dox  Data-Series.dox  Doxyfile  Doxyfile_dev  Examples.dox  Introduction.dox  Manual.dox  Mesh-Network.dox  Message-Encryption.md  Message-Protocol.md  Message-Transports.md  Message-Types-and-Flows.dox  Retained-Publications.dox  Security.dox  Topic-Strings.dox  Tutorials.dox
dps-micro/: .gitignore  SConscript  SConstruct  dps_shared.def
dps-micro/zephyr/: CMakeLists.txt  config_stm.bat  prj.conf  sample.yaml
examples/: common.c  common.h  common_qos.hpp  keys.c  keys.h  pub_many.c  pub_qos.cpp  publisher.c  reg_pubs.c  reg_subs.c  registry.c  sub_qos.cpp  subscriber.c
ext/: 0001-DPS.patch  SConscript  SConscript.intel-ipsec-mb  SConscript.libuv  SConscript.mbedtls  SConscript.safestring  libuv.patch  mbedtls_config.h  mbedtls_sha512_process_alt.c
go/: README  README.md  dps.go
inc/: bitvec.h  cbor.h  coap.h  dps.h  dps_dbg.h  dps_err.h  dps_event.h  dps_history.h  dps_internal.h  dps_synchronous.h  dps_uuid.h  murmurhash3.h  network.h  topics.h
include/: .compat.h.swp
js_scripts/: README  README.md  simple_pub.js  simple_pub_ks.js  simple_sub.js  simple_sub_ks.js
latex/: annotated.tex  building-and-running.tex  data-series.tex  dbg_8h.tex  dbg_8h_source.tex  dir_13c0c58698473ed8f9fbf60f7cb2fe0a.tex  dir_143d9111106c2ba2452f83cceb80c482.tex  dir_19a1ad10e03d3a0047dfb07071f3ce2d.tex  dps_8h.tex  dps_8h_source.tex  err_8h.tex  err_8h_source.tex  event_8h.tex  event_8h_source.tex  files.tex  group__debug.tex  group__event.tex  group__keystore.tex  group__node.tex  group__nodeaddress.tex  group__publication.tex  group__registration.tex  group__services.tex  group__status.tex  group__subscription.tex  group__uuid.tex  index.tex  mesh-network.tex  message-types-and-flow.tex  modules.tex  refman.tex  registration_8h.tex  registration_8h_source.tex  retained-publications.tex  security.tex  struct___d_p_s___key.tex  struct___d_p_s___key_cert.tex  struct___d_p_s___key_e_c.tex  struct___d_p_s___key_id.tex  struct___d_p_s___key_symmetric.tex  (+9 more)
py_scripts/: README  README.md  discovery.py  late_sub.py  repub.py  retained_pub.py  simple_pub.py  simple_pub_ks.py  simple_sub.py  simple_sub_ks.py  subs_tree.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_15.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  defines_1.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  functions_0.js  groups_0.js  groups_2.js  groups_3.js  groups_4.js  groups_6.js  groups_7.js  pages_0.js  pages_1.js  pages_2.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  (+15 more)
site_scons/: site_init.py  swig_doc.py
src/: .bitvec.c.swp  Node.cpp  Publisher.cpp  Subscriber.cpp  ack.c  ack.h  bitvec.c  bitvec.h  cbor.c  cbor.h  ccm.c  ccm.h  coap.c  coap.h  compat.h  cose.c  cose.h  crypto.h  dbg.c  discovery.c  dispatcher.c  dps.c  dps_background.c  dps_dbg.c  dps_err.c  dps_event.c  dps_history.c  dps_node.h  dps_registration.c  dps_synchronous.c  dps_uuid.c  ec.c  ec.h  err.c  event.c  gcm.c  gcm.h  history.c  history.h  (+34 more)
zephyr/: CMakeLists.txt
(+368 files in other folders)
